--- a/css/style.css
+++ b/css/style.css
@@ -1,311 +1,64 @@
 body{
-    margin: 0px;
-    padding: 0px; 
-    overflow-x: hidden;
-    font-family: "Raleway", sans-serif;
+   margin: 0px;
+   padding: 0px;
+   font-family: "Raleway", sans-serif;
 }
 
-.header{
-    margin: 0;
-    padding: 0;
+.nav-bar{
     width: 100%;
-    height: 95vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    font-size: 21px;
+    border-bottom: solid;
+    border-bottom-width: 2px;
+    border-bottom-color: lightgray;
+    height: 45px;
+    padding-top: 15px;
 }
 
-.invisible-nav{
-    display: flex;
-    justify-content: normal;
-    padding: 8px 20px;
-    margin-top: 1%;
-    z-index: 99;
-    width: 100%;
-}
-
-.btn{
-    margin-top: 1%;
-    background: transparent;
-    font-size: 20px;
-    border-radius: 30px;
-    padding:13px 21px;
+a{
     text-decoration: none;
-    transition: .5s ease-in-out;
-    color: rgb(99, 89, 166);
-    z-index: 6;
-    border: solid;
-    border-width: 2px;
-    border-color:rgb(99, 89, 166);
+    font-weight: bolder;
+    color: purple;
 }
 
-.btn:hover{
-    background-color: #6359a6;
-    color: white;
-    font-size: 20px
+a:hover{
+    color: plum;
 }
 
-.holder{
-    z-index: 99;
-    position: absolute;
-    padding-top: 21px; 
-       
+.link1{
+    padding-left: 15px;
+    padding-top: 20px;
 }
 
- .a{
-    font-size: 30px;
-    color: #6359a6;
+.link2{
+    float: right;
+    padding-right: 2%;
 }
 
-.a:hover{
-    color: blueviolet;
+.link3{
+    float: right;
+    padding-right: 2%;
 }
 
-.squares ul{
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 1;
+.about{
+    text-align: justify;
+    height: 510px;
 }
 
-.squares ul li{
-    position: absolute;
-    list-style: none;
-    display: block;
-    width: 20px;
-    height: 20px;
-    background-color: rgba(105, 105, 105, 0.3);
-    animation: effect 25s linear infinite;
-    bottom: -300px;
-    
-}
-
-.squares ul li:nth-child(1){
-    left: 25%;
-    width: 80px;
-    height:80px;
-    animation-delay: 0s;
-}
-
-.squares ul li:nth-child(2){
-    left: 10%;
-    width: 20px;
-    height: 20px;
-    animation-delay: 2s;
-}
-
-.squares ul li:nth-child(3){
-    left: 70%;
-    width: 20px;
-    height: 20px;
-    animation-delay: 4s;
-}
-
-.squares ul li:nth-child(4){
-    left: 40%;
-    width: 60px;
-    height: 60px;
-    animation-delay: 18s;
-}
-
-.squares ul li:nth-child(5){
-    left: 65%;
-    width: 20px;
-    height: 20px;
-    animation-delay: 4s;
-}
-
-.squares ul li:nth-child(6){
-    left: 75%;
-    width: 110px;
-    height: 110px;
-    animation-delay: 3s;
-}
-
-.squares ul li:nth-child(7){
-    left: 35%;
-    width: 150px;
-    height: 150px;
-    animation-delay: 7s;
-}
-
-.squares ul li:nth-child(8){
-    left: 50%;
-    width: 25px;
-    height: 25px;
-    animation-delay: 15s;
-}
-
-.squares ul li:nth-child(9){
-    left: 20%;
-    width: 15px;
-    height: 15px;
-    animation-delay: 2s;
-}
-
-.squares ul li:nth-child(6){
-    left: 85%;
-    width: 150px;
-    height: 150px;
-    animation-delay: 0s;
-}
-
-@keyframes effect{
-    0%{
-        transform: translateY(0) rotate(0deg);
-        border-radius: 0px;
-    }
-    100%{
-        transform: translateY(-1000px) rotate(720deg);
-        border-radius: 50%;
-    }
-}
- 
-.spinning-box{
-    height: 125px;
-    width: 125px;
-    border-width: 5px;
-    border: solid;
-    border-color: #ffffff1a;
-    z-index: 0;
-    position: absolute;
-    margin-left: 85px;
-    margin-top: 52px;
-    animation: spin 10s linear infinite;
-}
-
-@keyframes spin{
-    0%{
-       transform: rotate(0deg); 
-    }
-    100%{
-        transform: rotate(360deg); 
-    }
-}
-
-.container{
-    padding-top: 1px;
-    text-align: center;
-}
-
-.name{
-    color: rgba(99, 89, 166, 1);
-    font-size: 12vh;
-    
-}
-
-.job{
-    margin-top: -44px;
-    color: blueviolet;
-    font-size: 32px;
-}
-
-.avatar{
-    height: 250px;
-    display: block;
-    margin: 0 auto;
-    padding-bottom: 6%
-}
-
-.p1{
-    background-color: rgba(99, 89, 166, 0.92);
-    color: whitesmoke;
-    display: block;
-    text-align: center;
-    width: 100%;
-    height: 70vh;
-
+h1{
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    height: 35vh;
 }
 
 .t1{
-    font-size: 52px;
-    font-weight: bolder;
-}
-
-.t2{
-   margin-top: -20px;
-    font-size: 17px;
-    padding-left: 18%;
-    padding-right: 18%;
-}
-
-.t2-1{
-    font-size: 17px;
-    padding-bottom: 30px;  
-    padding-left: 18%;
-    padding-right: 18%;
-}
-
-.p2{
-    text-align: center;
-    background-color: #1a61aa;
-    color: snow;
-    margin-top: -12%;
-    margin-left: 7%;
-    margin-right: 7%;
-    border-radius: 10px;
-    box-shadow: 8px 20px 20px 20px rgba(7, 55, 74, 0.39);
-    padding-right: 10%;
     padding-left: 10%;
+    padding-right: 10%;
+    font-size: 18px;
+    margin-top: 35px; 
 }
 
-
-.t3{
-    font-size: 30px;
-    padding-top: 20px;
-    padding-bottom: 20px;
+footer{
+    border-top: solid;
+    border-top-width: 2px;
 }
-
-.d1{
-    height: 140px;
-    margin-top: auto;
-}
-
-.d2{
-    height: 140px;
-    margin-top: auto;
-}
-
-.t4{
-    font-size: 21px;
-}
-
-.t4-1{
-    font-size: 17px;  
-    margin-left: 7%;
-    margin-right: 7%;
-}
-
-.t5{
-    font-size: 21px;
-}
-
-.t5-1{
-    font-size: 17px;
-    margin-left: 7%;
-    margin-right: 7%;
-}
-
-/*scrollbar custom*/
-
-::-webkit-scrollbar{
-    width: 13px;
-}
-
-::-webkit-scrollbar-track{
-    border-radius: 5px;
-    box-shadow: inset 0 0 10px rgba (0, 0, 0, 0.25);
-}
-
-::-webkit-scrollbar-thumb{
-    border-radius: 5px;
-    background-color: rgb(210, 210, 210);
-}
-
-/*hover effect*/
-::-webkit-scrollbar-thumb:hover{
-    background-color: rgba(131, 27, 228, 0.452);
-}
-
