--- a/css/style.css
+++ b/css/style.css
@@ -8,11 +8,7 @@ body{
 }
 .wrapper {
     padding: 0 !important;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50% , -50%);
-    -webkit-transform: translate(-50%, -50%);
+    
 
 }
 .nav-bar{
@@ -49,7 +45,13 @@ a:hover{
     float: right;
     padding-right: 2%;
 }
-
+.content-is-centered {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50% , -50%);
+    -webkit-transform: translate(-50%, -50%);
+}
 .about{
     text-align: justify;
     height: 100%;
@@ -73,12 +75,6 @@ footer{
     text-align: center;
     border-top: 1px solid #ccc;
 }
-.h1{
-    display: flex;
-    justify-content: center;
-    align-items: flex-end;
-    height: 12vh;
-}
 
 .forms.row{
     display: flex;
@@ -100,22 +96,13 @@ input{
     font-family: "Raleway", sans-serif;
 }
 
-.foot{
-    border-top: solid;
-    border-top-width: 2px;
-    font-size: 22px;
-    padding-top: 1.5%;
-    display: flex;
-    justify-content: center;
-    border-top-color: lightgray;
-    margin-top: 2%;  
-}
   
 textarea{
     width: 100%;
     height: 175px;
     font-size: 17px;
     padding: 2%;
+    margin: 10px auto;
     border: solid;
     border-width: 2px;
     border-color: purple;
@@ -123,12 +110,13 @@ textarea{
 }
 
 .contact{
-    height: 75vh;
-    padding-top: 6%;
+    width: 100%;
 }
-
+.contact h1 {
+    text-align: center;
+}
 input{
-    margin-top: 10px;
+    margin: 5px auto;
 }
 
 .Send{
@@ -214,15 +202,6 @@ input{
         width: 100%;
         margin:0 !important;
         overflow: hidden;
-    }
-
-    .foot{
-        margin-top: 6%;
-        padding-top: 5%;
-    }
-
-    .Contact{
-        height: 90vh;
     }
 
     .about .about-content {
