--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,6 @@ body{
 
 a{
     text-decoration: none;
-    font-weight: bolder;
     color: purple;
     text-transform:capitalize !important;
 }
@@ -71,9 +70,13 @@ footer{
     width: 100%;
     bottom: 0;
     font-size: 22px;
-    padding: 14px 16px;
+    padding-top: 14px;
     text-align: center;
     border-top: 1px solid #ccc;
+}
+
+.foot{
+   top: 27em;
 }
 
 .forms.row{
@@ -84,6 +87,7 @@ footer{
 
 form{
     margin-top: 2.2%;
+    max-height: 56vh;
 }
 
 input{
@@ -99,7 +103,7 @@ input{
   
 textarea{
     width: 100%;
-    height: 175px;
+    height: 30vh;
     font-size: 17px;
     padding: 2%;
     margin: 10px auto;
@@ -128,7 +132,6 @@ input{
     border-radius: 19px;
     width: 23%;
     padding: 6px;
-    margin-top: 6%;
     border: solid;
     border-width: 2px;
     transition: 1s ease-in-out;
@@ -166,7 +169,7 @@ input{
 .Job{
     font-size: 20px;
     line-height: 1px;
-   
+    font-weight: 100;
 }
 
 .c2{
@@ -185,15 +188,14 @@ input{
 
 .menu {
 	height:100vh;
-	position:relative;
-	background:firebrick;
+	background: mediumpurple;
 	width: 0;
 	text-align:center;
 	position:fixed;
 	right: -20%;
-  z-index: 999999999999;
-  -webkit-transition: .6s linear;
-  transition: .6s linear;
+    z-index: 999999999999;
+    -webkit-transition: .6s linear;
+    transition: .6s linear;
 }
   
 .menu a{
@@ -262,7 +264,6 @@ span {
 
     .menu {
         height:100vh;
-        position:relative;
         background: mediumpurple;
         width: 0;
         text-align:center;
@@ -270,16 +271,18 @@ span {
         right: -20%;
         z-index: 999999999999;
        -webkit-transition: .6s linear;
-       transition: .6s linear; 
+        transition: .6s linear; 
+        top: 0;
+        overflow: auto;
      
     }
       
     .menu a{
         color:#FFFFFF;
         display:block;
-        line-height:50px;
-        padding-top: 50%;
-        margin-top: 78px;
+        line-height: 5em;
+
+    
     }		
     
     .active {
