--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ html {
     font-size: 14px;
 }
 
-.small{
+.small {
     font-size: 14px;
     font-weight: lighter;
 }
@@ -76,7 +76,7 @@ body a:hover {
     z-index: 1;
     width: 50px;
     height: 50px;
-    margin:-75px 0 0 -50px;
+    margin: -75px 0 0 -50px;
     border: 6px solid #fff;
     border-radius: 50%;
     border-top: 6px solid #3498db;
@@ -199,7 +199,7 @@ aside {
     min-height: 50vh;
 }
 
-.about_content{
+.about_content {
     padding-right: 17px;
 }
 
@@ -306,29 +306,29 @@ textarea {
 
 
 
-.scroll_top{
-    display: none; 
-    position: fixed; 
+.scroll_top {
+    display: none;
+    position: fixed;
     bottom: 30px;
     left: 95%;
     z-index: 99;
-    border: none; 
-    outline: none; 
-    color: orange; 
-    cursor: pointer; 
-    padding: 15px; 
+    border: none;
+    outline: none;
+    color: orange;
+    cursor: pointer;
+    padding: 15px;
     box-shadow: 13px 4px 27px rgba(0, 0, 0, 0.55);
-    font-size: 18px; 
+    font-size: 18px;
     background-color: #25557c;
     transition: all 0.6s ease-in;
 }
 
-.scroll_top:hover{
+.scroll_top:hover {
     background-color: orange;
     color: #25557c;
 }
 
-.wkt{
+.wkt {
     background-color: #131524;
 }
 
@@ -336,36 +336,34 @@ textarea {
     background-color: #4285f4;
 }
 
-.logo_container{
+.logo_container {
     display: flex;
     justify-content: center;
     width: 100%;
     border-radius: 30px;
-    padding: 2em;
+    padding: 2rem;
     transition: all 1s ease;
 }
 
-.logo_container:hover{
+.logo_container:hover {
     padding: 0;
 }
 
-.project_card{
+.project_card {
     text-align: center;
 }
 
-footer{
+.side_socials_holder {
+    position: fixed;
+    right: 0;
+    top: 30%;
+    padding: 0.6em;
+    font-size: 20px;
+    background-color: #25557c;
+    border-radius: 30px;
+    z-index: 99;
     display: none;
-    background-color: #f5f5f5;
 }
-
-.footer_text{
-    text-align: center;
-}
-
-footer .socials_holder{
-    font-size: 25px;
-}
-
 
 
 /*Media Queries*/
@@ -401,7 +399,7 @@ footer .socials_holder{
     }
 
     .role_content_holder,
-    .project_card{
+    .project_card {
         margin-top: 2em;
     }
 
@@ -414,13 +412,12 @@ footer .socials_holder{
         padding: 0;
     }
 
-    .send{
+    .send {
         width: 100%;
     }
 
-    footer{
+    .side_socials_holder {
         display: block;
     }
-
 
 }
